package vues;

public interface  Observateur {
     void update();
}
